[FIX] HTML truncate in arguments partial and motion partial

--- a/app/assets/stylesheets/briarcliff/_type.scss
+++ b/app/assets/stylesheets/briarcliff/_type.scss
@@ -50,6 +50,7 @@ br {
 
 p, div, small, ol, ul, li, small, span, blockquote {
   font-family: $font-sans;
+  word-break: break-word;
 }
 
 a {
